--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -1,40 +1,55 @@
-<nav class="navbar navbar-default navbar-fixed-top animated slideInDown"  id="navbarTop" >
+<nav class="navbar navbar-default navbar-fixed-top" style="box-shadow: rgba(8, 19, 31, 0.5) 0px 3px 10px 0px;background-color:white;">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" >
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+    <div class="navbar-header ">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand paFge-scroll" href="/">CIOC</a>
+      <a class="navbar-brand" href="/" style="color:rgb(0, 133, 202);">CIOC</a>
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-      <ul class="nav navbar-nav navbar-right" >
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="col-md-4" >
+        <div class="menuDropDown" class="dropdown">
+          <button class="btn dropdown-toggle sr-only" type="button" id="" data-toggle="dropdown">
+            <span class="caret"style="color:black">dropdown</span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="">
+            <li>drop 1</li>
+          </ul>
+        </div>
+      </div>
+
+
+
+
+
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li>
           {% if home %}
-              <a class="page-scroll" href="#services"> <i class="fa fa-check"></i> Services</a>
+          <a class="" href="#services"> <i class="fa fa-check"></i> Services</a>
           {% else %}
-              <a class="page-scroll" href="/#services"> <i class="fa fa-check"></i> Services</a>
+          <a class="" href="/#services"> <i class="fa fa-check"></i> Services</a>
           {% endif %}
         </li>
         <li>
-          <a href="/team"> <i class="fa fa-users"></i> Team</a>
+          <a href="/blog"> <i class="fa fa-users"></i> Team</a>
         </li>
         <li>
           <a href="/contacts"> <i class="fa fa-phone"></i> Contact</a>
         </li>
-        <!-- <li>
+         <li>
           <a href="/blog"> <i class="fa fa-copy"></i> Blog</a>
-        </li> -->
+        </li>
         <li>
           <a href="/career"> <i class="fa fa-line-chart"></i> Career</a>
         </li>
         {% if not user.is_authenticated %}
-        <!-- <li>
+        <li>
           <a href="/register"> <i class="fa fa-user"></i> Register</a>
-        </li> -->
+        </li>
         <li>
           <a href="/login"> <i class="fa fa-sign-in"></i> Login</a>
         </li>
@@ -47,7 +62,15 @@
           <a href="/logout"> <i class="fa fa-sign-out"></i> Logout</a>
         </li>
         {% endif %}
-      </ul>
+
+        <li>
+          <button type="button" class="btn btn-warning" style="background-color:#ff6900;margin-top:10px;">
+            Request Demo
+          </button>
+        </li>
+
+
+      </ul> -->
     </div>
   </div>
 </nav>
