--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -1,331 +1,43 @@
 {% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-
 <title>CIOC</title>
+<base href="/">
 {% endblock %} {% block specific_css %}
-<link href="{% static 'css/agency.css' %}" rel="stylesheet">
+<!-- <link href="{% static 'css/agency.css' %}" rel="stylesheet"> -->
 <link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
 <!-- Header -->
+
 {% block content %}
 
 <style media="screen">
   @media only screen and (max-width: 800px) {
-    .intro-text {
-      padding-top: 70vh !important;
-      position: absolute;
-      right: 10px !important;
+    .intro-text{
+      padding-top:70vh !important;position:absolute;right:10px !important;
     }
 
-    #particles-js {
+    #particles-js{
       background-image: url('/static/images/back_xs.svg');
     }
 
   }
+  
 </style>
 
 
-<div ng-app="app" ng-controller="main">
-  {% verbatim %}
-
-  <div id="particles-js" style="min-height:100vh;">
-
-    <div class="container">
-      <div class="intro-text text-right" style="text-align:right;padding-top:200px;position:absolute;right:50px;">
-        <div style="color:white;font-size:25px;margin-bottom:20px;">We are your technology partner</div>
-        <!-- <div class="intro-heading" >Think Free</div> -->
-        <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
-      </div>
-    </div>
-
-  </div>
-
-  {% endverbatim %}
-  <!-- Services Section -->
-  <div class="body">
-    <div class="row" style="background-color:#009688;color:white;">
-      <div class="container">
-        <section id="services">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Services</h2>
-                <h3 class="section-subheading">As your technology partner we can help you more then you can imagine.</h3>
-              </div>
-            </div>
-            <div class="row text-center">
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
-                      </span>
-                <h4 class="service-heading">IOT</h4>
-                <p>How about we take your data and services to all the devices you possibly think of be it for smart home to smart factory.</p>
-              </div>
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
-                      </span>
-                <h4 class="service-heading">Web</h4>
-                <p>As the starting point for each business we take care of brining your business online. Got a food delivery or other ecommerce business idea ? we are here to help.</p>
-              </div>
-              <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                          <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                          <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
-                      </span>
-                <h4 class="service-heading">Desktop/Mobile</h4>
-                <p>When we say mobility we mean serious productivity on the go. Dont let your employee stick to the web or a desktop machine to get the job done. Given them ability to work on the fly.</p>
-              </div>
-            </div>
-          </div>
-        </section>
-
-      </div>
-    </div>
-    <!-- tiles start -->
-    <div class="container dynamicTile " style="min-height:100vh">
-      <div class="row " style="padding-top:20vh">
-        <div class="col-sm-2 col-xs-4">
-          <div id="tile1" style="background-color: white">
-          </div>
-        </div>
-        <div class="col-sm-2 col-xs-4">
-          <div id="tile2" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img ng-src="static/images/metro/src1.png" class="img-responsive" />
-                </div>
-                <div class="item" style="background-color:#e67e22">
-                  <h3 class="tilecaption">Task Board</h3>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm-4 col-xs-8 ">
-          <div id="tile10" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <h3 class="tilecaption" style="font-size:30px">CRM</h3>
-                </div>
-                <div class="item">
-                  <img src="static/images/metro/crm.png" class="img-responsive" />
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm-4 col-xs-8">
-          <div id="tile7" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="static/images/metro/hr.png" class="img-responsive" />
-                </div>
-                <div class="item " style="background-color:#e74c3c">
-                  <h3 class="tilecaption" style="font-size:30px">HR</h3>
-                </div>
+<div ng-app="app" ng-controller="main" style="min-height:100vh;">
 
 
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4 col-xs-8">
-          <div id="tile7" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active" style="background-color:#9b59b6">
-                  <h3 class="tilecaption" style="font-size:30px">POS</h3>
-                </div>
-                <div class="item ">
-                  <img src="static/images/metro/pos.png" class="img-responsive" />
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm-2 col-xs-4">
-          <div id="tile8" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="static/images/metro/src2.png" class="img-responsive" />
-                </div>
-                <div class="item" style="background-color:#1abc9c">
-                  <h3 class="tilecaption">Project Management</h3>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm-2 col-xs-4">
-          <div id="tile9" class="tile">
-
-            <div class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="static/images/metro/src4.png" class="img-responsive" />
-                </div>
-                <div class="item" style="background-color:#1abd44">
-                  <h3 class="tilecaption">CRM on the Go</h3>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
+  <div ui-view></div>
 
 
-      </div>
-
-    </div>
-    <!-- tiles end -->
-    <div class="row " style="margin-top:4vh;">
-
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading" style="font-size:40px; padding-top:20px">Products We Have</h2>
-      </div>
-
-
-      <div id="myCarousel" class="carousel slide " data-ride="carousel" style="min-height:70vh">
-        <div class="carousel-inner " style="">
-
-          <div class="item active" style="padding-top:10vw">
-            <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-4">
-                <div class="row" align="center">
-                  <img ng-src="static/images/24tut.png" style="width:80%;">
-                </div>
-              </div>
-              <div class="col-md-4 ">
-                <div class="col-md-8" tyle="padding:30px;">
-                  <h1 style="font-size:20px; ">24tutors.com</h1>One-2-One online interactive class was never this easy then with 24Tutors. Get instantly connected to a tutor buddy 24x7
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item " style="padding-top:10vw">
-            <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-4">
-                <div class="row" align="center">
-                  <img ng-src="static/images/mono.png" style="width:60%;">
-                </div>
-              </div>
-              <div class="col-md-4 ">
-                <div class="col-md-8" tyle="padding:30px;">
-                  <h1 style="font-size:20px; ">monomerce.com</h1> Helping Trillion dollar e-commerce industry to manage inventory with ease and make sure you dont miss any order
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item " style="padding-top:10vw">
-            <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-4">
-                <div class="row" align="center">
-                  <img ng-src="static/images/libreERP.png" style="width:60%;">
-                </div>
-              </div>
-              <div class="col-md-4 " style="padding:30px;">
-                <div class="col-md-8">
-                  <h1 style="font-size:20px; ">cioc.in</h1>Free and open source alternative to SAP, Salesforce and Zoho with full control over with the user without compromising with the features
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item " style="padding-top:10vw">
-            <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-4">
-                <div class="row" align="center">
-                  <img ng-src="static/images/libreRPA.png" style="width:60%;">
-                </div>
-              </div>
-              <div class="col-md-4 " style="padding:30px;">
-                <div class="col-md-8">
-                  <h1 style="font-size:20px; ">cioc.in</h1>Horses for Sources and Forrester ranks RPA heigher then IOT/Cloud and self driving cars in terms of focus and investment around the globe. LibreRPA provides cutting edge alternative to coslty RPA softwares for free
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="item " style="padding-top:10vw">
-            <div class="row">
-              <div class="col-md-2">
-              </div>
-              <div class="col-md-4">
-                <div class="row" align="center">
-                  <img ng-src="static/images/rackm.png" style="width:80%;">
-                </div>
-              </div>
-              <div class="col-md-4 " style="padding:30px;">
-                <div class="col-md-8">
-                  <h1 style="font-size:20px; ">rackmint.com</h1>Rackmint provide one stop solution for Warehouse Industry to manage space, leads and billing
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Left and right controls -->
-        <a class="left carousel-control" style="background-image:none;" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" style="background-image:none;" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
-
-    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;">
-      <!-- Contact Section -->
-      {% endblock %} {% block footer %} {% include "footer.html" %}
-
-    </div>
-
-
-  </div>
 </div>
 
 
-
+{% include "footer.html" %}
 
 {% endblock %} {% block specific_js %}
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
+<!-- <script src="{% static 'js/jquery.easing.min.js' %}"></script>
 <script src="{% static 'js/classie.js' %}"></script>
-
-
-<script src="http://localhost:8080/script/chatter-whUl+COcwVmllwGmV0JRJFWNWDfB1JROQ3Nm5KRWG6o=.js"></script>
+<script src="{% static 'js/chatter.js' %}"></script>
 
 
 <script src="{% static 'js/agency.js' %}"></script>
@@ -335,7 +47,25 @@
 <script src="{% static 'js/app.homepage.js' %}"></script>
 
 <script src="{% static 'js/particles.js' %}"></script>
-<script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script> -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.3.4/tinymce.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.17/angular-ui-router.js"></script>
 
+<!-- <script src="{% static 'js/jquery.easing.min.js' %}"></script> -->
+<!-- <script src="{% static 'js/classie.js' %}"></script> -->
+<script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
+<script src="{% static 'js/angular-bootstrap-confirm.min.js' %}"></script>
+<!-- <script src="{% static 'js/cbpAnimatedHeader.js' %}"></script> -->
+<script src="{% static 'js/tinymce.min.js' %}"></script>
+<!-- <script src="{% static 'js/agency.js' %}"></script> -->
+<script src="{% static 'js/angular.min.js' %}"></script>
+<script src="{% static 'js/angular-ui-router.min.js' %}"></script>
+<script src="{% static 'js/angular-sanitize.min.js' %}"></script>
+<script src="{% static 'js/app.homepage.js' %}"></script>
+<script src="{% static 'js/angular-flash.js' %}"></script>
+<script src="{% static 'js/particles.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script>
 
 {% endblock %}
