--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -355,6 +355,23 @@
   background-position: center;
 }
 
+.redbtn {
+  background-color: #f24b4b;
+  color: #fff;
+  outline: 0;
+  border-radius: 2px;
+  z-index: 100;
+  border: 1px solid #f24b4b;
+  max-width: 200px;
+  padding: .8em 2.5em;
+  font-size: 16px;
+}
+.redbtn:hover{
+  background-color: #f66464;
+  color: #fff;
+  border: 1px solid #f45858;
+}
+
 @media only screen and (min-width:1500px) {
   .flex_section {
     margin: 100px 200px 100px 200px !important;
